[tool.poetry]
name = "lsh-pandas"
version = "0.1.0"
description = ""
authors = ["jay-rajan <jay.rajan@procore.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
nltk = "^3.8.1"
networkx = "^3.2.1"
pydantic = "^2.6.3"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
